--- a/Lesson1/HW_1.5.html
+++ b/Lesson1/HW_1.5.html
@@ -29,13 +29,13 @@
 <hr>
 <h2>АКТОРСЬКИЙ СКЛАД</h2><hr>
 <span>Майкл Кітон <br>
-Роль: Брюс Вейн / Бетмен <img src="img/Майкл%20Кілтон.png"></span><hr>
+Роль: Брюс Вейн / Бетмен <img src="img/Майкл%20Кілтон.png"alt=""Фотографія Майкла Кітона""></span><hr>
 <span>Кім Бейсінгер <br>
-Роль: Вікі Вейл <img src="img/Кім%20Бейсінгер.png"></span>
+Роль: Вікі Вейл <img src="img/Кім%20Бейсінгер.png" alt="Фотографія Кім Бейсінгер"></span>
 <hr>
 <span>Роберт Вул <br>
-Роль: Олександр Нокс <img src="img/Роберт%20Вул.png"></span><hr>
+Роль: Олександр Нокс <img src="img/Роберт%20Вул.png"alt="Фотографія Робертa Вулa"></span><hr>
 <span>Джек Ніколсон <br>
-Роль: Джокер <img src="img/Джек%20Ніколсон.png"></span><hr>
+Роль: Джокер <img src="img/Джек%20Ніколсон.png" alt="Фотографія Джекa Ніколсонa"></span><hr>
 </body>
 </html>
